--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+1.3.1 / July 17, 2020
+[Alexandr Topilski]
+- Resellers credits
+- Proxy for servers
+- Stabilization
+
 1.3.0 / June 24, 2020
 [Alexandr Topilski]
 - Resellers
