--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.4.0 / December 7, 2020
+[Alexandr Topilski]
+- Stabilization api
+
 1.3.2 / July 31, 2020
 [Alexandr Topilski]
 - Content requests
